# Flashcard-Extractor-for-Anki

./: pyproject.toml
prompts/: TOEICR TEST 必ず☆でる単 スピードマスター 上級編.json
src/: ChatGPT.py  ImageProcessing.py  convert_PDF_to_png.bat  export_IPA.py  extract_flashcard.py  merge_images.py
