[project]
name = "flashcard-extractor-for-anki"
version = "0.1.0"
description = ""
authors = [
    {name = "hurokume",email = "tatsumi.imada@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=12.1.0,<13.0.0)",
    "openai (>=2.15.0,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "slackweb (>=1.0.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
